epWeb/src/main/resources/static/resources/css/css.css
html {
    height: 100%;
    min-height: 100%;
    font-size: 100%;
}

.unselectable {
    -webkit-user-select: none;
    -webkit-touch-callout: none;
    -moz-user-select: none;
    -ms-user-select: none;
    user-select: none;
}

html[zoom]{
    font-size: 160%;
}

body[dark]{
    background-color: black;
    color: white !important;
}


.card[dark]{
    color: white !important;
    background-color: rgb(24, 24, 24) !important;
}


.card {
    color: black !important;
}

.list-group-item{
    color: black !important;
}

.btn-outline-light{
    color: white !important
}

.btn-outline-light:hover{
    color: black !important
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100%;
}

#layoutAuthentication_footer {
    padding-top: 20px;
    margin-top: auto;
    font-size: 20px;
    color: white;
}

.termos{
    text-decoration: none;
    color: white;
}

.termos:hover{
    color: white;
}

.dropdown-item:hover{
    background-color: rgb(134, 192, 202);
    font-size: 110%;
}



.logo {
    padding: 10px;
}

.logo img {
    height: 50px;
    margin-right: 10px;
}

.login img {
    height: 150px;
}


.login {
    margin-bottom: 50px;
}

.carousel img {
    height: 300px;
    object-fit: cover;
}

.banner_noticia {
    height: 300px;
    object-fit: cover;
    margin-bottom: 15px;
}


.noticia_categ{
    margin-bottom: 20px;
}

.perfil {
    margin-bottom: 50px;
}

.noticia_categ{
    height: 100%;
    width: 100%;
    object-fit: cover;
}


.noticia_categ:hover {
    transform: scale(102%);
    cursor: pointer; 
}
 .materia_resumo {
     margin-bottom: 15px;
 }



#tabela{
    border:solid 1px;
    text-align:left;
    background-color: white !important;
}
 

 
#tabela thead, tfoot{
    text-align:center;
    background:rgb(7,73,89);
    color: white !important;
}


#tabela input{
    width:100%;
}



[data-tooltip] {
    position: relative;
  }

  [data-tooltip]:after {
    display: none;
    position: absolute;
    top: 60px;
    padding: 5px;
    border-radius: 3px;
    left: calc(100% - 110px);
    content: attr(data-tooltip);
    white-space: nowrap;
    background-color: #0095ff;
    color: White;
  }

  [data-tooltip]:hover:after {
    display: block;
  }


  [data-tooltip-tecs]:after {
    display: none;
    position: absolute;
    top: -50px;
    padding: 5px;
    border-radius: 3px;
    left: calc(45%);
    content: attr(data-tooltip-tecs);
    white-space: nowrap;
    font-weight: bold;
    background-color: #b15800;
    color: White;
  }

  [data-tooltip-tecs]:hover:after {
    display: block;
  }


.logo_lgpd{
    width: 100%;
}

.giro_lgpd{
    width: 100%;
}

